--- a/first.html
+++ b/first.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> Fifty Shades of Shay </title>
+    <link rel:"stylesheet"href="style.css">
   </head>
   <body>
     <h1 id="top"> Fifty Shades of Shay </h1>
