--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
-<div class="grid">
-  <header> Name of your site.</header>
-  <nav> Navigation area </nav>
-  <sidebar>Ancillary content</sidebar>
-  <main>The main event</main>
-  <footer>Bottom of content</footer>
-</div>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="grid">
+      <header> Name of your site.</header>
+      <nav> Navigation area </nav>
+      <sidebar>Ancillary content</sidebar>
+      <main>The main event</main>
+      <footer>Bottom of content</footer>
+    </div>
+  </body>
+</html>
