--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div class="grid">
-      <header> <img src="oi_blaktext.png"> Name of your site.</header>
+      <header> <img src="oi_blacktext.png"> Name of your site.</header>
       <nav> Navigation area </nav>
       <sidebar>Ancillary content</sidebar>
       <main>The main event</main>
